# TokenSense

./: .env.example  .gitignore  CLAUDE.md  DEVPOST.md  LICENSE  PITCH_OVERVIEW.md  README.md  VULTR_ACTIAN_ARCHITECTURE.md  design.pen  dev.sh  docker-compose.yml  pitch.md  pyproject.toml
.cursor/plans/: landing.md  tokensense_build_plan_ccb0c365.plan.md  tokensense_progress_tracker_a679dd50.plan.md
backend/: Dockerfile  main.py  requirements.txt
backend/agents/: context_optimizer.py  query_agent.py  retrieval_agent.py  routing_agent.py  telemetry_agent.py
backend/routers/: ask_router.py  index_router.py  keys_router.py  optimize_router.py  stats_router.py
backend/utils/: auth.py  db.py
cli/: requirements.txt  tokensense.py
deploy/: Caddyfile  setup-vultr.sh
docs/: BACKEND_PLAN.md  FRONTEND_PLAN.md  PRODUCT_SUMMARY.md  USER_GUIDE.md  VULTR_SETUP.md  frontend_README.md  frontend_page_features.md  new_frontend_specs.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/src/lib/: api.ts  (+3 more)
tests/: README.md  test_actian_direct.py  test_actian_via_api.py
tests/backend/: conftest.py  requirements-test.txt  test_ask_router.py  test_auth.py  test_context_optimizer.py  test_db.py  test_index_router.py  test_optimize_router.py  test_query_agent.py  test_routing_agent.py  test_stats_router.py  test_telemetry_agent.py
tests/e2e/: package.json  playwright.config.ts
tests/frontend/: jest.config.ts  jest.setup.ts  package-lock.json  package.json
tokensense/: __init__.py  cli.py
(+21 files in other folders)
